--- a/src/App.css
+++ b/src/App.css
@@ -6,24 +6,16 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #333;
   line-height: 1.5;
 }
 
-a {
-  text-decoration: none;
-  color: #00b5de;
-}
 
 input {
   transition: all 0.3s ease;
   background-color: transparent;
   backdrop-filter: blur(3px);
-}
-
-a:hover {
-  text-decoration: none;
 }
 
 /* Main container */
@@ -154,9 +146,6 @@ input[type="email"]:focus {
   transform: scale(0.98);
 }
 
-.contact-number {
-  color: #00b5de;
-}
 
 .privacy label {
   color: #ccc;
@@ -165,6 +154,34 @@ input[type="email"]:focus {
   margin-top: 30px;
 }
 
+.privacy span {
+  color :#00b5de;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.whatsapp-icon {
+  position: relative;
+  top: 6px;
+  left: 2px;
+  width: 20px;
+  height: auto; /* maintains aspect ratio */
+}
+
+.powered-by-phone {
+  position: absolute;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: #00b5de;
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 1rem;
+  -webkit-tap-highlight-color: transparent;
+}
 .error-message {
   position: relative;
   bottom: 10px;
@@ -211,6 +228,19 @@ input[type="email"]:focus {
   max-width: 28rem;
 }
 
+.powered-by {
+  position: absolute;
+  bottom: 50px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 1rem;
+  -webkit-tap-highlight-color: transparent;
+}
+
 /* Responsive styles */
 
 /* Desktop and Tablet (768px and above)
@@ -238,6 +268,9 @@ input[type="email"]:focus {
 
   .sign-in-button:hover {
     background-color: #007f9b;
+  }
+  .powered-by-phone {
+    display: none;
   }
 }
 
